# gen-mdbook-summary

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
examples/default_introduction/: book.toml  readme.md
examples/default_introduction/src/c1/: readme.md
examples/default_introduction/src/c2/: README.md
examples/default_introduction/src/c3/: notice.md
examples/mdbook_ignore/: .gitignore  book.toml  mdbook.ignore  readme.md
examples/mdbook_ignore/src/: ignore.md  show.md
src/: cli.rs  lib.rs  main.rs
